--- a/app/views/zweets/show.html.erb
+++ b/app/views/zweets/show.html.erb
@@ -5,5 +5,10 @@
   <%= @zweet.status %>
 </p>
 
+<p>
+  <strong>Zombie:</strong>
+  <%= @zweet.zombie %>
+</p>
+
 <%= link_to 'Edit', edit_zweet_path(@zweet) %> |
 <%= link_to 'Back', zweets_path %>
