--- a/app/views/zweets/_form.html.erb
+++ b/app/views/zweets/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :status %><br>
     <%= f.text_field :status %>
   </div>
+  <div class="field">
+    <%= f.label :zombie_id %><br>
+    <%= f.text_field :zombie_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
