Views of zweets updated

--- a/app/views/zweets/edit.html.erb
+++ b/app/views/zweets/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @zweet %> |
-<%= link_to 'Back', zweets_path %>
+<%= link_to 'List of zweets', zweets_path %>
