--- a/app/views/zweets/index.html.erb
+++ b/app/views/zweets/index.html.erb
@@ -15,7 +15,7 @@
     <% @zweets.each do |zweet| %>
       <tr>
         <td><%= zweet.status %></td>
-        <td><%= zweet.zombie %></td>
+        <td><%= link_to zweet.zombie.name, zombie_path(zweet.zombie) %></td>
         <td><%= link_to 'Show', zweet %></td>
         <td><%= link_to 'Edit', edit_zweet_path(zweet) %></td>
         <td><%= link_to 'Destroy', zweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
