Adding new zweet fixet. Layout a little changed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,8 @@
 
 <%= yield %>
 
+<p><%= link_to "List of zweets", zweets_path %></p>
+<p><%= link_to "List of zombies", zombies_path %></p>
+
 </body>
 </html>
