--- a/app/views/zweets/_form.html.erb
+++ b/app/views/zweets/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :zombie_id %><br>
-    <%= f.text_field :zombie_id %>
+    <%= f.text_field :zombie_id %><!--, :value => params[:zombie] -->
   </div>
   <div class="actions">
     <%= f.submit %>
