--- a/app/views/zweets/edit.html.erb
+++ b/app/views/zweets/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @zweet %> |
-<%= link_to 'List of zweets', zweets_path %>
+<%= link_to 'Show', @zweet %>
