--- a/app/views/zweets/show.html.erb
+++ b/app/views/zweets/show.html.erb
@@ -10,5 +10,4 @@
   <%= link_to @zweet.zombie.name, zombie_path(@zweet.zombie) %>
 </p>
 
-<%= link_to 'Edit', edit_zweet_path(@zweet) %> |
-<%= link_to 'List of zweets', zweets_path %>
+<%= link_to 'Edit', edit_zweet_path(@zweet) %>
