Now only zombies can create zweets, however still there is no authorisation. Some changes in layouts were done. Moreover new zombie adds automatically a welcome message

--- a/app/views/zombies/show.html.erb
+++ b/app/views/zombies/show.html.erb
@@ -23,5 +23,6 @@
   </table>
 <% end %>
 <p> <%= link_to "Add zweet", new_zweet_path(:zombie=>@zombie) %> </p>
+<p> <%= link_to "Show zweets of #{@zombie.name}'s neighbours", local_zweets_path(@zombie.grave)%></p>
 
 <%= link_to 'Edit', edit_zombie_path(@zombie) %>
