--- a/app/views/zweets/_form.html.erb
+++ b/app/views/zweets/_form.html.erb
@@ -17,7 +17,8 @@
   </div>
   <div class="field">
     <%= f.label :zombie_id %><br>
-    <%= f.text_field :zombie_id %><!--, :value => params[:zombie] -->
+    <b><%= @zweet.zombie.name unless @zweet.zombie.nil? %></b>
+    <%= f.hidden_field :zombie_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
